# resonantrabbit

./: README.md  main.py  pyproject.toml  test_unidiff_parsing.py
testdata/: empty_lines.patch  generated_test.patch  simple.patch
