[project]
name = "resonantrabbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
    "unidiff>=0.7.5",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-safe-fixes = ["F401"]
extend-select = ["I"]
